// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions view matches snapshot 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when deleting connector 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={true}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when failed 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when paused 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-play"
      />
    </span>
    <span>
      Resume
    </span>
  </button>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when running connector action 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={true}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when unassigned 1`] = `
<div
  className="sc-gsTEea fGTfUx"
>
  <button
    className="sc-bdfBQB gfDMZr"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart all tasks
    </span>
  </button>
  <a
    href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit config
      </span>
    </button>
  </a>
  <button
    className="sc-bdfBQB cNPkMu"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;
